dev/beta -> dev/master upmerge (#92)
* Rework Temporal Paradox trigger mechanism to update in real-time

* Fix bug: "No void is generated on first day of temporal paradox"

* Added Foreign Policies: Relations

* spiderChemist effect placed in calculateEffects so
it only runs when it has to.
Unlock realtion tied to calculateEffects so MP
diplomacy can upgrade it and run it on load.
Race Standing requirement removed.
Added a few comments.

* Added Lizard diplomats, changed Nagas and sharks

* Added Shark Botanists and Merchants
Removed Shark Shipwrights
Change: Lizard Priests

* Shark Scribes buy double the iron.
Embassy requirement and policy costs adjusted.

* Added Naga Architects

* Changed two policies

Changed Dragon Astrologers and Lizard Ecologists.
Removed some unused code.

* Added Spider Paleontologists

- Added Spider Paleontologists
- Changed Spider Geologists
- Nerfed Griffin Machinists

* Improved relation descriptions

* Bug fixes

* Add new policy: Scientific Communism

* fix to holy genocide production multiplier

Originally was supposed to be a linear uncapped increase, but it had a LDR limiting it to a 2x boost

* Balance changes

-  Spider Geologists are now based on embassies
- Shark Botanists refine bonus in IW is now instead wood bonus

* Fix the thing I broke in science.js

Fix error with meta being undefined--oopsie, that was my bad

* Balance changes

* Scaling policy changes

Spider Geologists and Lizard Diplomats no longer have a default bonus.
The description of policies scaling with embassies now includes the calculation.

* Policy description change

Changed two policy descriptions to second person, so they are line with all other policies.

* Relation description change

Changed the new relation policies to use second person.
Changed Ship potential bonus to Reactor Vessel bonus.

* Spider Chemist bug fix

When importing a save, spiders sold multiple instances of ke

--- a/res/theme_arctic.css
+++ b/res/theme_arctic.css
@@ -813,8 +813,22 @@ body.scheme_arctic.with_background_image {
 	background: local repeat top left url('img/theme_arctic_background_04.jpg'), #d0d0d0;
 	box-shadow: -1px 1px 2px #505050;
 }
-.scheme_arctic .census-block.simLeader a.leaderHref {
+.scheme_arctic .census-block.simLeader .leaderHref,
+.scheme_arctic .census-block.simFavorite .favoriteHref {
+	background-color: transparent;
+	background-image: url('img/theme_arctic_background_02.png');
+	background-repeat: no-repeat;
+	background-attachment: local;
+	background-position: top -10px left;
+	border: solid 1px #c0c0c0;
+	box-shadow: inset -1px 1px 1px #707070;
 	color: #0793f8;
+}
+.scheme_arctic .census-block.simLeader .leaderHref:hover,
+.scheme_arctic .census-block.simFavorite .favoriteHref:hover {
+	border: outset 1px #c0c0c0;
+	background-position: top -16px left;
+	box-shadow: 1px 1px 2px #707070;
 }
 .scheme_arctic .census-block .info { /* info of kitten */
 	font-size: 0.9em;
@@ -945,6 +959,9 @@ body.scheme_arctic.with_background_image {
 	border-image-slice: 0 0 4 0;
 	border-image-outset: 0;
 	border-image-repeat: round;
+	white-space: nowrap !important;
+	text-overflow: clip; /* It seems to be that ellipsis doesn't work properly in color themes where the achievement is all on one line */
+	overflow: hidden;
 }
 .scheme_arctic .achievement:not(.unethical).unlocked:hover {
 	text-shadow: 0 -1px 1px #93c4cf;
