--- a/res/theme_oil.css
+++ b/res/theme_oil.css
@@ -624,8 +624,13 @@ body.scheme_oil,
 .scheme_oil .census-block.simLeader {
 	background-color : rgba(160, 160, 160, 0.2); /* color #A0A0A0; */
 }
-.scheme_oil .census-block.simLeader a.leaderHref {
-	color: #118AC2;
+.scheme_oil .census-block.simLeader .leaderHref {
+	background: transparent !important;
+	border: none !important;
+}
+.scheme_oil .census-block.simLeader .leaderHref,
+.scheme_oil .census-block.simFavorite .favoriteHref {
+	color: #ffc900;
 }
 .scheme_oil .census-block .info { /* info of kitten */
 	font-size: 0.9em;
@@ -750,11 +755,16 @@ body.scheme_oil,
 	margin: 10px; /* default margin-bottom: 10px; */
     height: 40px;
     background-color: #000000;
-    color: #909090;
     text-shadow: rgba(192, 192, 192) 2px 0 10px; /* color #BBC0CA */
     letter-spacing: 1px;
-	border-color : rgba(255, 201, 0, 0.3); /* color #FFC900; */
 	border-radius: 19px;
+	white-space: nowrap !important;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.scheme_oil .achievement:not(.name) {
+	color: #909090;
+	border-color : rgba(255, 201, 0, 0.3); /* color #FFC900; */
 }
 .scheme_oil .achievement:hover {
 	color: #E0E0E0;
