--- a/res/theme_sleek.css
+++ b/res/theme_sleek.css
@@ -284,11 +284,17 @@ body.scheme_sleek  {
     margin: 10px;
     height: 40px;
     background-color: rgba(0, 0, 0, 0.1);
-    color: white;
     text-shadow: rgb(118, 176, 255) 2px 0px 10px;
     text-transform: uppercase;
     letter-spacing: 1px;
     cursor: default !important;
+    white-space: nowrap !important;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.scheme_sleek .achievement:not(.name) {
+    color: white;
 }
 
 .scheme_sleek .achievement.unethical {
@@ -414,6 +420,8 @@ body.scheme_sleek  {
     outline: 0 !important;
     text-transform: uppercase !important;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3), 0 2px 10px 0 rgba(0, 0, 0, 0.3) !important;
+}
+.scheme_sleek .btn.modern:not(.links-container .btn.modern) { /*.btn.modern except if it's a descendant of .links-container*/
     width: 262px !important;
 }
 
