--- a/res/theme_wood.css
+++ b/res/theme_wood.css
@@ -925,7 +925,8 @@ body.scheme_wood.with_background_image {
 	border-image-width: 6px 6px 6px 6px;
 	border-image-slice: 12 12 12 12;
 }
-.scheme_wood .census-block.simLeader a.leaderHref {
+.scheme_wood .census-block.simLeader .leaderHref,
+.scheme_wood .census-block.simFavorite .favoriteHref {
 	color: #d4b356;
 }
 .scheme_wood .census-block .info { /* info of kitten */
@@ -1058,6 +1059,9 @@ body.scheme_wood.with_background_image {
 	border-image-outset: 0;
 	border-image-repeat: round;
 	box-shadow: inset 1px 1px 2px #000000, 1px 1px 1px #000000;
+	white-space: nowrap !important;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 .scheme_wood .achievement:hover {
 	box-shadow: inset -1px -1px 2px #000000, 2px 2px 5px #000000, 0 -1px 2px #403939;
