--- a/res/default.css
+++ b/res/default.css
@@ -528,6 +528,7 @@ td.resLimitWarn, .res-cell.resLimitWarn  {
 	margin-bottom: 20px;
     padding: 15px;
     border: 1px solid #B0B0B0;
+    height: calc(100vh - 125px);
 }
 
 #toggleCenter {
