--- a/res/theme_arctic.css
+++ b/res/theme_arctic.css
@@ -18,7 +18,7 @@
 /* ************* */
 /* *** FONTS *** */
 /* ************* */
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+KR:wght@300,400,700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:wght@300,400,700&display=swap);
 
 /* ******************************************** */
 /* ******************* GAME ******************* */
