--- a/res/default.css
+++ b/res/default.css
@@ -242,9 +242,10 @@ select>option {
     line-height: 16px;
 }
 
-/*.btn .btnContent .btnTitle {
-
-}*/
+.btn .btnContent .btnTitle {
+    display: inline-flex;
+    gap: 4px;
+}
 
 .btn.small-text span {
     font-size: 90%;
@@ -769,13 +770,13 @@ span.genericWarning,
 
 .trade-race .buys {
     color: #01A9DB;
-    width: 40px;
+    min-width: 40px;
     display: inline-block;
 }
 
 .trade-race .sells {
     color: green;
-    width: 40px;
+    min-width: 40px;
     display: inline-block;
 }
 
