--- a/res/theme_sleek.css
+++ b/res/theme_sleek.css
@@ -50,11 +50,11 @@
     opacity: 1.0;
 }
 
-.scheme_sleek div {
+.scheme_sleek > div {
     color: #DCDCDC;
 }
 
-.scheme_sleek .disabled div {
+.scheme_sleek .disabled > div {
     color: #565656;
 }
 
