--- a/res/theme_bluish.css
+++ b/res/theme_bluish.css
@@ -73,10 +73,10 @@ body.scheme_bluish {
 	color: #915dfa;
 	opacity: 1.0; /* default opacity: 0.6 */
 }
-.scheme_bluish div {
+.scheme_bluish > div {
 	color: #a6acc7;
 }
-.scheme_bluish .disabled div { /* color text for disabled */
+.scheme_bluish .disabled > div { /* color text for disabled */
 	color: #4b5373;
 }
 .scheme_bluish h1 {
