--- a/res/theme_chocolate.css
+++ b/res/theme_chocolate.css
@@ -812,6 +812,13 @@ body.scheme_chocolate.with_background_image {
 	padding: 10px 20px; /* default padding-top: 20px; */
 	color: #120f0c;
 }
+.scheme_chocolate .tabInner.Challenges td.craftStuffPanel + td.craftStuffPanel > table { /* list of kittens in reserve */
+	background-color: rgba(36, 27, 19, 0.25); /* copied from census-block because inside we have a list of kitten names*/
+	border: 1px solid;
+	border-radius: 9px;
+	font-size: 0.9em;
+	color: #c0a787;
+}
 
 /**********************************************************/
 /******************** ACHIEVEMENTS TAB ********************/
