Master -> Beta merge (#125)
* fix: Broken font references (#108)

Every time these themes are loaded, a 400 error is produced for these invalid font requests.

* Dev/beta -> Master merge (#113)

* Rework Temporal Paradox trigger mechanism to update in real-time

* Fix bug: "No void is generated on first day of temporal paradox"

* Added Foreign Policies: Relations

* spiderChemist effect placed in calculateEffects so
it only runs when it has to.
Unlock realtion tied to calculateEffects so MP
diplomacy can upgrade it and run it on load.
Race Standing requirement removed.
Added a few comments.

* Added Lizard diplomats, changed Nagas and sharks

* Added Shark Botanists and Merchants
Removed Shark Shipwrights
Change: Lizard Priests

* Shark Scribes buy double the iron.
Embassy requirement and policy costs adjusted.

* Added Naga Architects

* Changed two policies

Changed Dragon Astrologers and Lizard Ecologists.
Removed some unused code.

* Added Spider Paleontologists

- Added Spider Paleontologists
- Changed Spider Geologists
- Nerfed Griffin Machinists

* Improved relation descriptions

* Bug fixes

* Add new policy: Scientific Communism

* fix to holy genocide production multiplier

Originally was supposed to be a linear uncapped increase, but it had a LDR limiting it to a 2x boost

* Balance changes

-  Spider Geologists are now based on embassies
- Shark Botanists refine bonus in IW is now instead wood bonus

* Fix the thing I broke in science.js

Fix error with meta being undefined--oopsie, that was my bad

* Balance changes

* Scaling policy changes

Spider Geologists and Lizard Diplomats no longer have a default bonus.
The description of policies scaling with embassies now includes the calculation.

* Policy description change

Changed two policy descriptions to second person, so they are line with all other policies.

* Relation description change

Changed the new relation policies to use second person.
Changed Ship potential bonus to Reactor Vessel bonus.



--- a/res/theme_chocolate.css
+++ b/res/theme_chocolate.css
@@ -91,10 +91,10 @@ body.scheme_chocolate.with_background_image {
 	color: #e8969f;
 	opacity: 1.0; /* default opacity: 0.6 */
 }
-.scheme_chocolate div {
+.scheme_chocolate > div {
 	color: #dccebd;
 }
-.scheme_chocolate .disabled div { /* color text for disabled */
+.scheme_chocolate .disabled > div { /* color text for disabled */
 	color: #857160;
 }
 .scheme_chocolate h1 {
@@ -811,6 +811,13 @@ body.scheme_chocolate.with_background_image {
 	margin-top: 2px;
 	padding: 10px 20px; /* default padding-top: 20px; */
 	color: #120f0c;
+}
+.scheme_chocolate .tabInner.Challenges td.craftStuffPanel + td.craftStuffPanel > table { /* list of kittens in reserve */
+	background-color: rgba(36, 27, 19, 0.25); /* copied from census-block because inside we have a list of kitten names*/
+	border: 1px solid;
+	border-radius: 9px;
+	font-size: 0.9em;
+	color: #c0a787;
 }
 
 /**********************************************************/
