--- a/res/theme_catnip.css
+++ b/res/theme_catnip.css
@@ -79,10 +79,10 @@ body.scheme_catnip {
 	color: #00979f;
 	opacity: 1.0; /* default opacity: 0.6 */
 }
-.scheme_catnip div {
+.scheme_catnip > div {
 	color: #1e2114;
 }
-.scheme_catnip .disabled div { /* color text for disabled */
+.scheme_catnip .disabled > div { /* color text for disabled */
 	color: #575a4b;
 }
 .scheme_catnip h1 {
@@ -879,6 +879,13 @@ body.scheme_catnip {
     color: #3c4128;
 	border: 1px solid rgba(0, 0 , 0, 0.25);
 	border-radius: 5px;
+}
+.scheme_catnip .tabInner.Challenges td.craftStuffPanel + td.craftStuffPanel > table { /* list of kittens in reserve */
+	background-color: rgba(0 ,0 ,0 , 0.6); /* copied from census-block because inside we have a list of kitten names*/
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+	font-size: 0.9em;
+	color: #d6dacb;
 }
 
 /* ******************************************************** */
